Allow embeds in CMS markdown preview

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -72,6 +72,7 @@ collections:
         name: "body"
         widget: "markdown"
         required: false
+        sanitize_preview: false
       - label: "Layout"
         name: "layout"
         widget: "hidden"
